--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4351,4 +4351,5 @@ File: Responsive
   .user-list .user-list-item .user-desc {
     margin-left: 0; } }
 
+  div.dt-buttons .nofiles{display: none;}
 /*# sourceMappingURL=style.css.map */
